// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileCardDetails reportingLines property should match snapshot when no reporting lines are specified 1`] = `
<Styled(div)>
  <Styled(h2)
    data-testid="profilecard-name"
    id="profilecard-name-label"
    noMeta={true}
  >
    full name test (jscrazy) 
  </Styled(h2)>
  <CustomLozenges />
  <IconLabel
    icon="email"
  />
  <IconLabel
    icon="time"
  />
  <IconLabel
    icon="companyName"
  >
    Atlassian
  </IconLabel>
  <IconLabel
    icon="location"
  />
  <ReportingLinesDetails
    fireAnalyticsWithDuration={[MockFunction]}
  />
</Styled(div)>
`;

exports[`ProfileCardDetails reportingLines property should match snapshot when no reporting lines are specified 2`] = `
<Styled(div)>
  <Styled(h2)
    data-testid="profilecard-name"
    id="profilecard-name-label"
    noMeta={true}
  >
    full name test (jscrazy) 
  </Styled(h2)>
  <CustomLozenges />
  <IconLabel
    icon="email"
  />
  <IconLabel
    icon="time"
  />
  <IconLabel
    icon="companyName"
  >
    Atlassian
  </IconLabel>
  <IconLabel
    icon="location"
  />
  <ReportingLinesDetails
    fireAnalyticsWithDuration={[MockFunction]}
    reportingLines={{}}
  />
</Styled(div)>
`;

exports[`ProfileCardDetails reportingLines property should match snapshot when no reporting lines are specified 3`] = `
<Styled(div)>
  <Styled(h2)
    data-testid="profilecard-name"
    id="profilecard-name-label"
    noMeta={true}
  >
    full name test (jscrazy) 
  </Styled(h2)>
  <CustomLozenges />
  <IconLabel
    icon="email"
  />
  <IconLabel
    icon="time"
  />
  <IconLabel
    icon="companyName"
  >
    Atlassian
  </IconLabel>
  <IconLabel
    icon="location"
  />
  <ReportingLinesDetails
    fireAnalyticsWithDuration={[MockFunction]}
    reportingLines={
      {
        "managers": [],
        "reports": [],
      }
    }
  />
</Styled(div)>
`;

exports[`ProfileCardDetails reportingLines property should match snapshot when reporting lines are specified 1`] = `
<Styled(div)>
  <Styled(h2)
    data-testid="profilecard-name"
    id="profilecard-name-label"
    noMeta={true}
  >
    full name test (jscrazy) 
  </Styled(h2)>
  <CustomLozenges />
  <IconLabel
    icon="email"
  />
  <IconLabel
    icon="time"
  />
  <IconLabel
    icon="companyName"
  >
    Atlassian
  </IconLabel>
  <IconLabel
    icon="location"
  />
  <ReportingLinesDetails
    fireAnalyticsWithDuration={[MockFunction]}
    reportingLines={
      {
        "managers": [
          {
            "accountIdentifier": "abcd",
            "identifierType": "ATLASSIAN_ID",
            "pii": {
              "name": "name",
              "picture": "picture",
            },
          },
        ],
        "reports": [
          {
            "accountIdentifier": "abcd",
            "identifierType": "ATLASSIAN_ID",
            "pii": {
              "name": "name",
              "picture": "picture",
            },
          },
          {
            "accountIdentifier": "abcd",
            "identifierType": "ATLASSIAN_ID",
            "pii": {
              "name": "name",
              "picture": "picture",
            },
          },
        ],
      }
    }
  />
</Styled(div)>
`;
